# hueniform

./: .gitignore  CLAUDE.md  Makefile  README.md
.claude/skills/verify/: SKILL.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: CLAUDE.md  converters.py  detections.py  errors.py  garments.py  health.py  schemas.py  suggestions.py  taxonomy.py
backend/app/detection/: CLAUDE.md  helpers.py  pipeline.py
backend/app/matcher/: CLAUDE.md  colour.py  constants.py  explain.py  harmony.py  ranking.py  roles.py  slots.py  taxonomy.py
backend/app/services/: CLAUDE.md  detection_service.py  garment_service.py  suggestion_service.py  taxonomy_service.py
backend/app/storage/: CLAUDE.md  engine.py  helpers.py  image_store.py  migration.py  models.py  staging.py
backend/tests/: conftest.py  test_architecture.py
backend/tests/api/: conftest.py  test_api_foundation.py  test_detections.py  test_garments.py  test_suggestions.py  test_taxonomy.py
backend/tests/detection/: test_helpers.py  test_model_pipeline.py  test_pipeline.py
backend/tests/fixtures/: __init__.py  generate_images.py  palettes.py  test_fixtures.py  test_wardrobes.py  wardrobes.py
backend/tests/fixtures/images/real/: blank_bg.expected.json  blue_block.expected.json  red_block.expected.json  teal_block.expected.json  teal_orange.expected.json
backend/tests/fixtures/legacy/: __init__.py
backend/tests/matcher/: test_colour.py  test_constants.py  test_explain.py  test_harmony.py  test_ranking.py  test_roles.py  test_slots.py  test_snapshot.py  test_taxonomy.py
backend/tests/matcher/snapshots/: classifications.json  explanations.json  ranking.json
backend/tests/perf/: test_bounds.py
backend/tests/services/: conftest.py  test_detection_service.py  test_garment_service.py  test_regeneration_service.py  test_suggestion_service.py
backend/tests/storage/: test_image_store.py  test_migration.py  test_models.py  test_staging.py
docs/: 00-milestone-plan.md  01-project-brief.md  02-requirements.md  03-api-contract.md  03-architecture.md  05-test-strategy.md  09-v0.2.0-brief.md  project-brief.md
docs/04-wireframes/: 00-overview.md  01-upload-detect.html  01-upload-detect.md  02-confirm-and-correct.html  02-confirm-and-correct.md  03-inventory.html  03-inventory.md  04-garment-detail.html  04-garment-detail.md  05-outfit-request.html  05-outfit-request.md  06-suggestion-results.html  06-suggestion-results.md  HANDOFF-03-inventory.md  HANDOFF-05-outfit-request.md
docs/meta/: lessons-learned.md  method-improvements.md
docs/meta/starterkit/: CLAUDE.md  README.md
docs/meta/starterkit/.claude/skills/sfk-init/: SKILL.md
docs/meta/starterkit/.claude/skills/sfk-next-milestone/: SKILL.md
docs/meta/starterkit/addons/meta-loop/: lessons-learned.md  method-improvements.md
docs/meta/starterkit/docs/: api-contract.md  architecture.md  milestone-plan.md  project-brief.md  requirements.md  test-strategy.md
docs/meta/starterkit/docs/wireframes/: overview.md
docs/meta/starterkit/process/: README.md
docs/meta/starterkit/process/.sfk/: manifest.md
docs/meta/starterkit/process/.sfk/templates/: CLAUDE.md
docs/meta/starterkit/process/tickets/: CONVENTIONS.md
docs/meta/starterkit/skills/init/: SKILL.md
docs/meta/starterkit/skills/next-milestone/: SKILL.md
docs/meta/starterkit/skills/next-ticket/: SKILL.md
docs/meta/starterkit/skills/sfk-init/: SKILL.md
docs/meta/starterkit/skills/sfk-next-milestone/: SKILL.md
docs/meta/starterkit/skills/sfk-next-ticket/: SKILL.md
docs/meta/starterkit/skills/sfk-verify/: SKILL.md
docs/meta/starterkit/skills/verify/: SKILL.md
docs/meta/starterkit/tickets/: BOARD.md  CLAUDE.md  CONVENTIONS.md  TICKET-TEMPLATE.md
docs/spikes/: 2026-06-18-f4-category-slot-model.md
e2e/: playwright.config.ts  smoke.spec.ts
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vitest.config.ts
frontend/src/: App.module.css  App.test.tsx  App.tsx  CLAUDE.md  index.css  router.tsx
frontend/src/api/: client.ts  endpoints.ts  queries.ts  types.ts
frontend/src/components/: Banner.module.css  Banner.tsx  ErrorBanner.module.css  ErrorBanner.tsx  GarmentCard.module.css  GarmentCard.tsx  LoadingState.module.css  LoadingState.tsx  PaletteStrip.module.css  PaletteStrip.tsx  Swatch.module.css  Swatch.tsx  WarningBanner.module.css  WarningBanner.tsx
frontend/src/routes/: AddConfirm.module.css  AddConfirm.tsx  AddGarment.module.css  AddGarment.tsx  ConfirmCorrect.test.tsx  GarmentDetail.module.css  GarmentDetail.test.tsx  GarmentDetail.tsx  Inventory.test.tsx  OutfitSuggest.test.tsx  Suggest.module.css  Suggest.test.tsx  Suggest.tsx  UploadDetect.test.tsx  Wardrobe.module.css  Wardrobe.tsx
frontend/src/test/: components.test.tsx  contract-examples.ts  handlers.ts  setup.ts  test-utils.tsx
frontend/src/utils/: colour.ts  typeLabel.ts
scripts/: run_server.py  seed_test_wardrobe.py
tickets/: BOARD.md  CLAUDE.md  CONVENTIONS.md  HUE-001-initialise-repository.md  HUE-002-backend-skeleton.md  HUE-003-frontend-skeleton.md  HUE-004-backend-test-tooling.md  HUE-005-frontend-test-tooling.md  HUE-006-shared-test-fixtures.md  HUE-007-matcher-constants.md  HUE-008-matcher-colour.md  HUE-009-matcher-taxonomy.md  HUE-010-matcher-roles.md  HUE-011-matcher-harmony.md  HUE-012-wardrobe-fixtures.md  HUE-013-matcher-slots.md  HUE-014-matcher-ranking.md  HUE-015-matcher-explain.md  HUE-016-storage-models.md  HUE-017-image-staging-store.md  HUE-018-detection-pure-helpers.md  HUE-019-detection-pipeline.md  HUE-020-detection-real-model.md  HUE-021-detection-service.md  HUE-022-garment-service.md  HUE-023-regeneration-service.md  HUE-024-suggestion-service.md  HUE-025-api-foundation.md  HUE-026-api-taxonomy.md  HUE-027-api-detections.md  HUE-028-api-garment-create.md  HUE-029-api-garment-read.md  HUE-030-api-garment-mutate.md  HUE-031-api-suggestions.md  HUE-032-frontend-api-client.md  HUE-033-screen-upload-detect.md  HUE-034-screen-confirm-correct.md  HUE-035-screen-inventory.md  HUE-036-screen-garment-detail.md  HUE-037-screen-outfit-suggest.md  (+60 more)
(+5 files in other folders)
