[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hueniform"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.6.0",
    "pillow>=11.0.0",
    "numpy>=2.1.0",
    "scikit-learn>=1.5.0",
    "rembg>=2.0.50",
    "onnxruntime>=1.20.0",
]

[project.optional-dependencies]
# Test dependencies added by HUE-004.
dev = []

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
    "model: tests requiring the real rembg model — excluded from make test",
    "perf: performance timing assertions — excluded from make test",
]
