[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hueniform"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.6.0",
    "pillow>=11.0.0",
    "numpy>=2.1.0",
    "scikit-learn>=1.5.0",
    "rembg>=2.0.50",
    "onnxruntime>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "hypothesis>=6.100",
    "import-linter>=2.1",
    "httpx2>=0.28",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--strict-markers"
markers = [
    "model: tests requiring the real rembg model — excluded from make test",
    "perf: performance timing assertions — excluded from make test",
]

# ── Hypothesis ────────────────────────────────────────────────────────────────
# The "deterministic" profile is activated by setting HYPOTHESIS_PROFILE=deterministic
# (done by make test-backend). Developers run with the default randomised profile.
[tool.hypothesis]
suppress_health_check = ["too_slow"]

# ── import-linter: dependency-rule enforcement (test strategy §5.1) ───────────

[tool.importlinter]
root_packages = ["app"]

[[tool.importlinter.contracts]]
name = "1: lower layers must not import app.api"
type = "forbidden"
source_modules = [
    "app.services",
    "app.detection",
    "app.matcher",
    "app.storage",
]
forbidden_modules = ["app.api"]

[[tool.importlinter.contracts]]
name = "2: app.matcher is framework-free (NFR-9)"
type = "forbidden"
source_modules = ["app.matcher"]
forbidden_modules = [
    "app.api",
    "app.services",
    "app.detection",
    "app.storage",
]

[[tool.importlinter.contracts]]
name = "3: app.detection imports only allowed matcher submodules"
type = "forbidden"
source_modules = ["app.detection"]
forbidden_modules = [
    "app.api",
    "app.services",
    "app.storage",
    "app.matcher.roles",
    "app.matcher.harmony",
    "app.matcher.slots",
    "app.matcher.ranking",
    "app.matcher.explain",
]

[[tool.importlinter.contracts]]
name = "4: app.storage imports nothing from other layers"
type = "forbidden"
source_modules = ["app.storage"]
forbidden_modules = [
    "app.api",
    "app.services",
    "app.detection",
    "app.matcher",
]

[[tool.importlinter.contracts]]
name = "5: app.api must not bypass services to reach lower layers directly"
type = "forbidden"
source_modules = ["app.api"]
forbidden_modules = [
    "app.detection",
    "app.matcher",
    "app.storage",
]
