[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hueniform"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.6.0",
    "pillow>=11.0.0",
    "numpy>=2.1.0",
    "scikit-learn>=1.5.0",
    "rembg>=2.0.50",
    "onnxruntime>=1.20.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "hypothesis>=6.100",
    "import-linter>=2.1",
    "httpx2>=0.28",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--strict-markers"
markers = [
    "model: tests requiring the real rembg model — excluded from make test",
    "perf: performance timing assertions — excluded from make test",
]

# ── Hypothesis ────────────────────────────────────────────────────────────────
# The "deterministic" profile is activated by setting HYPOTHESIS_PROFILE=deterministic
# (done by make test-backend). Developers run with the default randomised profile.
[tool.hypothesis]
suppress_health_check = ["too_slow"]

# ── import-linter: dependency-rule enforcement (test strategy §5.1) ───────────

[tool.importlinter]
root_packages = ["app"]

[[tool.importlinter.contracts]]
name = "1: lower layers must not import app.api"
type = "forbidden"
source_modules = [
    "app.services",
    "app.detection",
    "app.matcher",
    "app.storage",
]
forbidden_modules = ["app.api"]

[[tool.importlinter.contracts]]
name = "2: app.matcher is framework-free (NFR-9)"
type = "forbidden"
source_modules = ["app.matcher"]
forbidden_modules = [
    "app.api",
    "app.services",
    "app.detection",
    "app.storage",
]

[[tool.importlinter.contracts]]
name = "3: app.detection imports only allowed matcher submodules"
type = "forbidden"
source_modules = ["app.detection"]
forbidden_modules = [
    "app.api",
    "app.services",
    "app.storage",
    "app.matcher.roles",
    "app.matcher.harmony",
    "app.matcher.slots",
    "app.matcher.ranking",
    "app.matcher.explain",
]

[[tool.importlinter.contracts]]
name = "4: app.storage imports nothing from other layers"
type = "forbidden"
source_modules = ["app.storage"]
forbidden_modules = [
    "app.api",
    "app.services",
    "app.detection",
    "app.matcher",
]

[[tool.importlinter.contracts]]
name = "5: app.api must not bypass services to reach lower layers directly"
type = "forbidden"
source_modules = ["app.api"]
forbidden_modules = [
    "app.detection",
    "app.matcher",
    "app.storage",
]
# The "forbidden" contract checks transitive imports, so every legitimate
# services → lower-layer edge must be listed here to prevent the api →
# services → lower chain from tripping the rule.  Update this list whenever
# a service module gains a new lower-layer import.
ignore_imports = [
    "app.services.detection_service -> app.detection.pipeline",
    "app.services.detection_service -> app.matcher.colour",
    "app.services.detection_service -> app.matcher.taxonomy",
    "app.services.detection_service -> app.storage.staging",
    "app.services.garment_service -> app.matcher.colour",
    "app.services.garment_service -> app.matcher.taxonomy",
    "app.services.garment_service -> app.storage.image_store",
    "app.services.garment_service -> app.storage.models",
    "app.services.garment_service -> app.storage.staging",
    "app.services.suggestion_service -> app.matcher.colour",
    "app.services.suggestion_service -> app.matcher.explain",
    "app.services.suggestion_service -> app.matcher.ranking",
    "app.services.suggestion_service -> app.matcher.roles",
    "app.services.suggestion_service -> app.matcher.slots",
    "app.services.suggestion_service -> app.matcher.taxonomy",
    "app.services.suggestion_service -> app.storage.models",
    "app.services.taxonomy_service -> app.matcher.taxonomy",
    # Narrow exception: compile-time constant only, no business logic crossing.
    "app.api.schemas -> app.matcher.slots",
]
